# ai-phone-assistant

./: .gitignore  AXION_CONTEXT.md  LAST_SESSION.md  LICENSE  NOTICE  README.md  main.py  pyproject.toml  requirements.txt  test.py  test_logger.py  test_logger_multiple.py
android/: adb.py  apps.py  media.py  youtube.py
assistant/: dispatcher.py  llm.py  parser.py  speech.py
axion/arsenal/: __init__.py  action.py
axion/arsenal/android/: __init__.py  apps.py  back.py  home.py  screen.py  screenshot.py  swipe.py  tap.py  type_text.py  ui.py
axion/chronicle/: __init__.py  chronicle.py
axion/cli/: main.py
axion/core/: __init__.py  bootstrap.py  dispatcher.py  executor.py  registry.py
axion/devices/: __init__.py  android.py
axion/nexus/: __init__.py  adb.py  exceptions.py
axion/oracle/android/: __init__.py  screen.py  screenshot.py  ui.py
axion/oracle/android/ui/: _init__.py  analyzer.py  models.py  parser.py
axion/oracle/vision/: analyzer.py  image.py
axion/vault/: __init__.py  context.py  paths.py  settings.py  vault.py
docs/: AXION_CONTEXT.md  LAST_SESSION.md  ROADMAP.md
docs/adr/: 0001-runtime-directory.md  0002-nexus-transport-layer.md  0003-action-execution-model.md
